--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 					<version>3.2</version>
 				</plugin>
 				<plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.17</version>
+                </plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
 					<version>3.0.0</version>
@@ -69,6 +74,26 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <violationSeverity>error</violationSeverity>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                </configuration>
+                <executions>
+                	<execution>
+                		<id>run-checkstyle</id>
+                		<phase>package</phase>
+                		<goals>
+                			<goal>checkstyle</goal>
+                		</goals>
+                	</execution>
+                </executions>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -102,6 +127,7 @@
                     <header>${basedir}/LICENSE</header>
                     <strictCheck>true</strictCheck>
                     <excludes>
+                    	<exclude>**/checkstyle.xml</exclude>
                     	<exclude>**/LICENSE</exclude>
                     </excludes>
                 </configuration>
