Fixed checkstyle issues

--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
                     <configLocation>checkstyle.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
-                    <violationSeverity>error</violationSeverity>
                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                    <linkXRef>false</linkXRef>
                 </configuration>
                 <executions>
                 	<execution>
