Change version to 1.0.1-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
 	<groupId>com.github.pascalgn.jiracli</groupId>
 	<artifactId>jiracli</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>jiracli</name>
