Added application icon

--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,7 @@
 					<failIfUnknown>true</failIfUnknown>
 					<mapping>
 						<g4>SLASHSTAR_STYLE</g4>
+						<svg>XML_STYLE</svg>
 					</mapping>
 					<excludes>
 						<exclude>**/checkstyle.xml</exclude>
