--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,12 @@
 			<version>20160212</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.googlecode.java-diff-utils</groupId>
+			<artifactId>diffutils</artifactId>
+			<version>1.3.0</version>
+		</dependency>
+
 		<!-- Test dependencies: -->
 
 		<dependency>
@@ -239,7 +245,7 @@
 			<scope>test</scope>
 		</dependency>
 
-	    <dependency>
+		<dependency>
 			<groupId>org.nanohttpd</groupId>
 			<artifactId>nanohttpd</artifactId>
 			<version>2.3.0</version>
