--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
 				<groupId>com.mycila</groupId>
 				<artifactId>license-maven-plugin</artifactId>
 				<configuration>
-					<header>${basedir}/LICENSE</header>
+					<header>${basedir}/header.txt</header>
 					<strictCheck>true</strictCheck>
 					<failIfUnknown>true</failIfUnknown>
 					<mapping>
